# firebase-hs

./: CHANGELOG.md  LICENSE  README.md  firebase-hs.cabal
.github/workflows/: ci.yml  publish.yml
src/Firebase/: Auth.hs  Firestore.hs  Servant.hs
src/Firebase/Auth/: Types.hs  WAI.hs
src/Firebase/Firestore/: Internal.hs  Query.hs  Types.hs
test/: Main.hs
